# gperf2flamegraph

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build.yml  update.yml
nix/pkgs/: g2f.nix  gperf2flamegraph.nix
src/: flamegraph.rs  main.rs  parser.rs  symbols.rs
