[package]
name = "g2f"
version = "0.1.0"
edition = "2021"
authors = ["Emin <cchuqiming@gmail.com>"]
description = """
A simple playground for rust
"""

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
clap = { version = "4.5.58", features = ["derive"] }
anyhow = "1.0.101"
byteorder = "1.5.0"
regex = "1.12.3"
path-clean = "1.0.1"
tempfile = "3.25.0"
ahash = "0.8.12"
lazy_static = "1.5.0"
